--- a/res/layout/sagardotegi_detail_fragment.xml
+++ b/res/layout/sagardotegi_detail_fragment.xml
@@ -1,67 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" 
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txIzena"
+        <RelativeLayout
+            android:id="@+id/idLayout"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_weight="0" >
+
+            <LinearLayout
+                android:id="@+id/mapFragmentContainer"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:orientation="vertical" >
+
+                <ImageView
+                    android:id="@+id/imgMap"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/bg_map"
+                    android:visibility="visible" />
+
+                <fragment
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:map="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/mapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    class="com.google.android.gms.maps.SupportMapFragment"
+                    android:visibility="gone"
+                    map:uiScrollGestures="false"
+                    map:uiZoomControls="false"
+                    map:uiZoomGestures="false" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/mapCover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/transparent" />
+
+            <ImageView
+                android:id="@+id/imgSagardotegi"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/camera" />
+        </RelativeLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="Sagardotegia"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:orientation="vertical"
+            android:paddingLeft="10dp" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" >
+
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tlf" />
+
+                <TextView
+                    android:id="@+id/txTlf"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" >
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/email" />
+
+                <TextView
+                    android:id="@+id/txEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" >
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/web" />
+
+                <TextView
+                    android:id="@+id/txWeb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" >
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:src="@drawable/helbide" />
+
+                <TextView
+                    android:id="@+id/txHelbide"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/idLayout"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="0" >
-
-        <LinearLayout
-            android:id="@+id/mapFragmentContainer"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:id="@+id/imgMap"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/bg_map"
-                android:visibility="visible" />
-
-            <fragment
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:map="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/mapFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                class="com.google.android.gms.maps.SupportMapFragment"
-                android:visibility="gone"
-                map:uiScrollGestures="false"
-                map:uiZoomControls="false"
-                map:uiZoomGestures="false" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/mapCover"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/transparent" />
-
-        <ImageView
-            android:id="@+id/imgSagardotegi"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/camera" />
-    </RelativeLayout>
-
-</LinearLayout>
+</ScrollView>
