--- a/res/menu/sagardotegi_menu.xml
+++ b/res/menu/sagardotegi_menu.xml
@@ -7,6 +7,11 @@
         android:showAsAction="ifRoom|withText"
         android:title="Home"/>
     <item
+        android:id="@+id/menu_reload"
+        android:icon="@drawable/reload"
+        android:showAsAction="ifRoom|withText"
+        android:title="Reload"/>
+    <item
         android:id="@+id/menu_image"
         android:icon="@drawable/picture"
         android:showAsAction="ifRoom|withText"
