--- a/res/menu/sagardotegiak_menu.xml
+++ b/res/menu/sagardotegiak_menu.xml
@@ -6,6 +6,11 @@
         android:icon="@drawable/home"
         android:showAsAction="ifRoom|withText"
         android:title="Home"/>
+	<item
+        android:id="@+id/menu_reload"
+        android:icon="@drawable/reload"
+        android:showAsAction="ifRoom|withText"
+        android:title="Reload"/>
     <item
         android:id="@+id/menu_help"
         android:icon="@drawable/help"
