--- a/res/layout/sagardotegi_detail_fragment.xml
+++ b/res/layout/sagardotegi_detail_fragment.xml
@@ -52,6 +52,7 @@
                 android:layout_height="150dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
+                android:visibility="gone"
                 android:src="@drawable/camera" />
         </RelativeLayout>
 
@@ -65,6 +66,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="0" >
 
                 <ImageView
@@ -83,6 +85,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="0" >
 
                 <ImageView
@@ -101,6 +104,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="fill_vertical"
                 android:layout_weight="0" >
 
                 <ImageView
@@ -119,6 +123,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="0" >
 
                 <ImageView
