--- a/res/layout/gertaera_row.xml
+++ b/res/layout/gertaera_row.xml
@@ -9,6 +9,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_weight="0"
+        android:padding="10dp"
         android:src="@drawable/ic_launcher" />
 
     <LinearLayout
