--- a/res/layout/img_camera_dialog.xml
+++ b/res/layout/img_camera_dialog.xml
@@ -15,8 +15,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Iruzkinik?"
-            android:inputType="textMultiLine" >
+            android:hint="Argazkiarentzat iruzkinik?"
+            android:inputType="textMultiLine"
+            android:lines="4" >
 
         </EditText>
 
