--- a/res/layout/balorazio_dialog.xml
+++ b/res/layout/balorazio_dialog.xml
@@ -5,20 +5,20 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_weight="1" >
 
         <RatingBar
             android:id="@+id/rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" 
-            android:numStars="5"
-            android:stepSize="0.5"
+            android:layout_weight="1"
             android:max="10"
+            android:numStars="5"
             android:progress="5"
-            />
+            android:stepSize="0.5" />
 
     </LinearLayout>
 
