--- a/res/layout/sailkapena_row.xml
+++ b/res/layout/sailkapena_row.xml
@@ -5,7 +5,7 @@
     android:layout_marginBottom="5dp"
     android:orientation="horizontal" >
 
-    <LinearLayout
+    <LinearLayout android:id="@+id/rowSailkapena"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_weight="0"
