--- a/res/layout/gertaera_row.xml
+++ b/res/layout/gertaera_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal" >
 
     <ImageView
@@ -14,7 +14,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -22,7 +22,6 @@
             android:layout_height="wrap_content"
             android:gravity="right|center_vertical"
             android:orientation="horizontal" >
-
 
             <TextView
                 android:id="@+id/txGertaeraDate"
@@ -32,6 +31,14 @@
                 android:gravity="right"
                 android:text="11/11/11 11:11"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <ImageView
+                android:id="@+id/imgReply"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:src="@drawable/reply" />
+
         </LinearLayout>
 
         <TextView
@@ -39,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="txEventText"
+            android:text=" txEventText txEventText txEventText txEventText txEventText txEventText txEventText txEventText txEventText txEventTexttxEventTexttxEventText txEventText "
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
 
