--- a/res/layout/oharra_activity.xml
+++ b/res/layout/oharra_activity.xml
@@ -6,18 +6,31 @@
 
     <ImageView
         android:id="@+id/imgOharra"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
+        android:layout_weight="2"
         android:padding="20dp"
         android:src="@drawable/erronka" />
 
-    <TextView
-        android:id="@+id/txOharra"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Large Text"
-        android:padding="20dp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/txOharra"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp"
+                android:text="Large Text"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </ScrollView>
+    </LinearLayout>
 
 </LinearLayout>
