--- a/res/layout/sagardotegi_row.xml
+++ b/res/layout/sagardotegi_row.xml
@@ -28,7 +28,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
             android:layout_weight="1"
             android:gravity="center_vertical|center_horizontal"
             android:orientation="horizontal" >
@@ -39,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:text="sagardotegiName"
+                android:text="sagardotegiName sagardotegiName sagardotegiName "
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
