--- a/res/menu/sagardotegiak_menu.xml
+++ b/res/menu/sagardotegiak_menu.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    
+    <item android:id="@+id/menu_search"
+          android:title="Search"
+          android:icon="@drawable/search"
+          android:showAsAction="always"
+          android:actionViewClass="com.actionbarsherlock.widget.SearchView" />
 
     <item
         android:id="@+id/menu_home"
