--- a/res/layout/sagardotegi_detail_fragment.xml
+++ b/res/layout/sagardotegi_detail_fragment.xml
@@ -64,6 +64,7 @@
             android:paddingLeft="10dp" >
 
             <LinearLayout
+                android:id="@+id/txTlfRow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -85,6 +86,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/txEmailRow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -105,6 +107,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/txWebRow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="fill_vertical"
@@ -125,6 +128,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/txHelbideRow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -146,6 +150,7 @@
             </LinearLayout>
             
             <LinearLayout
+                android:id="@+id/txEdukieraRow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
