--- a/res/layout/sagardoegunak_activity.xml
+++ b/res/layout/sagardoegunak_activity.xml
@@ -6,8 +6,8 @@
     android:orientation="horizontal" >
 
     <fragment
-        android:id="@+id/sagardotegiakFragment"
-        android:name="net.sareweb.android.txotx.fragment.SagardoegunakFragment_"
+        android:id="@+id/sagardoEgunakFragment"
+        android:name="net.sareweb.android.txotx.fragment.SagardoEgunakFragment_"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0"
