--- a/res/layout/dashboard_button.xml
+++ b/res/layout/dashboard_button.xml
@@ -4,12 +4,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/imgButton"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="center_horizontal|center_vertical"
             android:src="@drawable/ic_launcher" />
 
