--- a/res/layout/dashboard_button.xml
+++ b/res/layout/dashboard_button.xml
@@ -15,6 +15,7 @@
 
         <TextView
             android:id="@+id/txButtonText"
+            android:paddingLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
