--- a/res/layout/sagardoegun_row.xml
+++ b/res/layout/sagardoegun_row.xml
@@ -28,10 +28,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="48dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|center_horizontal"
+            android:minHeight="48dp"
             android:orientation="horizontal" >
 
             <TextView
@@ -43,13 +43,25 @@
                 android:text="sagardoEgunName sagardoEgunName sagardoEgunName "
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-            <TextView
-                android:id="@+id/txBB"
-                android:layout_width="50dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="10.0"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/txBB"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                   android:gravity="center_vertical|center_horizontal"
+                    android:text="10.0"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                <net.sareweb.android.txotx.custom.FollowUnfollowButton_
+                    android:id="@+id/btnFollowUnfollow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical|center_horizontal" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
