--- a/res/layout/sailkapena_row.xml
+++ b/res/layout/sailkapena_row.xml
@@ -41,10 +41,16 @@
                 android:id="@+id/txScreenName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="sagardotegiName (10)"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
+            
+            <net.sareweb.android.txotx.custom.FollowUnfollowButton_
+                    android:id="@+id/btnFollowUnfollow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical|center_horizontal" />
         </LinearLayout>
 
         <LinearLayout
