--- a/res/layout/dashboard_button.xml
+++ b/res/layout/dashboard_button.xml
@@ -11,17 +11,27 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_weight="0"
             android:src="@drawable/ic_launcher" />
 
         <TextView
             android:id="@+id/txButtonText"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
             android:text="button"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
+        <Button
+            android:id="@+id/txButtonNum"
+            style="@style/CountButton"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_weight="0"
+            android:background="@drawable/btn_blue"
+            android:text="14" >
+        </Button>
     </LinearLayout>
 
 </merge>
