--- a/res/menu/sagardotegi_menu.xml
+++ b/res/menu/sagardotegi_menu.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <!--
     <item
         android:id="@+id/menu_home"
         android:icon="@drawable/home"
         android:showAsAction="ifRoom|withText"
         android:title="Home"/>
-    <item
-        android:id="@+id/menu_reload"
-        android:icon="@drawable/reload"
-        android:showAsAction="ifRoom|withText"
-        android:title="Reload"/>
+    -->
+    
     <item
         android:id="@+id/menu_image"
         android:icon="@drawable/picture"
@@ -26,5 +24,15 @@
         android:icon="@drawable/half_star"
         android:showAsAction="ifRoom|withText"
         android:title="Txooootx!"/>
+    <item
+        android:id="@+id/menu_zabaldu"
+        android:icon="@drawable/share"
+        android:showAsAction="ifRoom|withText"
+        android:title="Zabaldu"/>
+    <item
+        android:id="@+id/menu_reload"
+        android:icon="@drawable/reload"
+        android:showAsAction="ifRoom|withText"
+        android:title="Reload"/>
 
 </menu>
