Loading and some little changes. Deleted deprecated files

--- a/res/layout/follow_unfollow_button.xml
+++ b/res/layout/follow_unfollow_button.xml
@@ -4,10 +4,10 @@
     android:layout_height="wrap_content" >
 
         <ImageView
-            android:id="@+id/imgStar"
+            android:id="@+id/imgPin"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:src="@drawable/star_false" />
+            android:src="@drawable/pin_false" />
 
 </merge>
