--- a/res/layout/gertaera_row.xml
+++ b/res/layout/gertaera_row.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/imgGertaera"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_weight="0"
         android:padding="10dp"
         android:src="@drawable/ic_launcher" />
@@ -46,8 +46,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text=" txEventText txEventText txEventText txEventText txEventText txEventText txEventText txEventText txEventText txEventTexttxEventTexttxEventText txEventText "
+            android:text=" txEventText txEventText txEventText txEventText  "
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/imgArgazki"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/agplv3" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
