--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -7,6 +7,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp">
+
+        <EditText
+            android:id="@+id/txScreenName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/btn_blue"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="aritzg"
+            style="@style/screenName">
+
+            <requestFocus />
+        </EditText>
+
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="40dp"
         android:layout_weight="1" >
 
